28/5/15
  Don't take bar height of screen height if show_bar == 1

23/5/15
  Fix for bar not starting on the right monitor
  Added option in rc file to set SHOW_BAR for each
   desktop like DEFAULTMODE

24/3/15
  Fix for bar not toggling after monitor disconnect

29/11/14
  Allow one window on a desktop in stacking mode to
   be resized horizontally

12/11/14
  Add ability to handle monitor connects/disconnects
  Some minor bug fixes
  Moved event functions to events.c 'cause who likes
   scrolling through large files...

20/10/14
  Add option for application name(WM_NAME) to be used in
   apps.conf
  Add transient windows to applications that can be used
   in apps.conf
  Fix for spaces in application names used in apps.conf
  More code tidying in buttonpress()

13/3/14
  Code tidy in buttonpress()

4/3/14
  Right click an unfocused desktop in the switcher to move
   the focused window to that desktop

1/3/14
  Add option in rc.conf to select which desktop to start on

22/2/14
  Don't manage dock apps with '_NET_WM_WINDOW_TYPE_DOCK' set

20/2/14
  Add option BAR_SHORT to rc.conf to shorten the bar's 
  length to have room for an external app

31/1/14
  Fix for kill_client() when window has save dialog

29/1/14
  Code tidy up in terminate() and readkeysapps.c

29/1/14
  Add new function "terminate" for keyboard shortcut to
  close any open windows, exit the window manager and shutdown(1)
  or reboot(2)

5/12/13
  Add minimum size for window when resizing with keyboard
   in stacking mode

31/10/13
  Fix for windows not moving desktops with multiple monitors
   in stacking mode

22/10/13
  Fix for focus not changing when transient window had focus
   and current window was clicked on

20/10/13
  Fix for focus not changing with one open window and a
   transient window

15/10/13
  Better window management with transient windows open
    - can now cycle through all open windows with the keyboard

6/10/13
  Fix for failed start with Xinerama info not available

28/9/13