@@ -76,6 +76,10 @@ TOPBAR 0
 SHOW_BAR 0
 # Show the number of opened windows in the desktop switcher? 0=yes,1=no
 SHOWNUMOPEN 1
+# Useless gaps for the tiling modes in pixels
+# UG_OUT is distance screen edge to window, UG_IN is for between windows
+#UG_OUT 10
+#UG_IN 15
 # How to display the current tiling mode in the bar
 MODENAME [V];[F];[H];[G];[C];
 # Name the desktops
